--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@typescript-eslint/parser": "^4.28.2",
     "@vitejs/plugin-vue": "^2.2.0",
     "@vue/test-utils": "^2.0.0-rc.18",
+    "dotenv": "^16.0.0",
     "eslint": "^8.11.0",
     "eslint-plugin-html": "^6.2.0",
     "eslint-plugin-vue": "^8.5.0",
